--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="text">
           <h3 class="title">Информация</h3>
-          <p>Сдается в аренду 211 м² престижной торговой площади в первой линии центральной пешеходной улицы города.</p>
+          <p>Сдается в аренду 211 м² престижной торговой площади в первой линии центральной пешеходной улицы города.</p>
           <p>Два больших зала по 85 м² и подсобные помещения более 40 м². Электричество, водоснабжение, канализация, сигнализация, широкополосной интернет, обслуживающий персонал.</p>
         </div>
         <div class="street-description">
@@ -31,8 +31,8 @@
             <img src="images/street.jpg" alt="">
             <div class="label">Прогуляйтесь сами с помощью Google Street View</div>
           </a>
-          <p>Улица Ленина, в народе — <strong>Арбат</strong>, является первой и единственной  пешеходной зоной города Улан-Удэ, где проводятся почти все <strong> общегородские праздники и массовые народные гуляния</strong>. Сюда же приходят <strong>всевозможные туристы</strong> и пеший городской маршрут.</p>
-          <p>Также это территория является <strong>крупнейшим центром торговли </strong> еще со времен Царской России. Здесь расположены множество магазинов и пунктов общественного питания.</p>
+          <p>Улица Ленина, в народе — <b>Арбат</b, является первой и единственной  пешеходной зоной города Улан-Удэ, где проводятся почти все <b> общегородские праздники и массовые народные гуляния</b>. Сюда же приходят <b>всевозможные туристы</b> и пеший городской маршрут.</p>
+          <p>Также это территория является <b>крупнейшим центром торговли </b> еще со времен Царской России. Здесь расположены множество магазинов и пунктов общественного питания.</p>
           <p>Представлены такие бренды как Рив Гош, Adidas, Reebok, Cвязной,  Евросеть, Телефон.ру, МТС, Мегафон, Билайн, Tele2, Shene, Ostin,  Gloria Jeans, Westfalika, Rieker, DNS, Сбербанк, Газпромбанк, Бинбанк и другие менее известные.</p>
           <p>Также поблизости находятся Центральный Универмаг, Гостинные ряды,  Центральный рынок, торговые центры: Galaxy, Eurozona, Forum, Сибирь, Таврический, Столичный, Большой; деловые центры Арун, Курбатовский, Садко; площадь Революции.</p>
         </div>
