--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="images/street.jpg" alt="">
             <div class="label">Прогуляйтесь сами с помощью Google Street View</div>
           </a>
-          <p>Улица Ленина, в народе — <strong>Арбат</strong, является первой и единственной  пешеходной зоной города Улан-Удэ, где проводятся почти все  <strong>общегородские праздники и массовые народные гуляния</strong>. Сюда же приходят <strong>всевозможные туристы</strong> и пеший городской маршрут.</p>
+          <p>Улица Ленина, в народе — <strong>Арбат</strong>, является первой и единственной  пешеходной зоной города Улан-Удэ, где проводятся почти все  <strong>общегородские праздники и массовые народные гуляния</strong>. Сюда же приходят <strong>всевозможные туристы</strong> и пеший городской маршрут.</p>
           <p>Также это территория является <strong>крупнейшим центром торговли </strong> еще со времен Царской России. Здесь расположены множество магазинов и пунктов общественного питания.</p>
           <p>Представлены такие бренды как Рив Гош, Adidas, Reebok, Cвязной,  Евросеть, Телефон.ру, МТС, Мегафон, Билайн, Tele2, Shene, Ostin,  Gloria Jeans, Westfalika, Rieker, DNS, Сбербанк, Газпромбанк, Бинбанк и другие менее известные.</p>
           <p>Также поблизости находятся Центральный Универмаг, Гостинные ряды,  Центральный рынок, торговые центры: Galaxy, Eurozona, Forum, Сибирь, Таврический, Столичный, Большой; деловые центры Арун, Курбатовский, Садко; площадь Революции.</p>
