--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p>Улица Ленина, в народе — <b>Арбат</b>, является первой и единственной  пешеходной зоной города Улан-Удэ, где проводятся почти все  <b>общегородские праздники и массовые народные гуляния</b>. Сюда же приходят <b>всевозможные туристы</b> и пеший городской маршрут.</p>
           <p>Также это территория является <b>крупнейшим центром торговли </b> еще со времен Царской России. Здесь расположены множество магазинов и пунктов общественного питания.</p>
           <p>Представлены такие бренды как Рив Гош, Adidas, Reebok, Cвязной,  Евросеть, Телефон.ру, МТС, Мегафон, Билайн, Tele2, Shene, Ostin,  Gloria Jeans, Westfalika, Rieker, DNS, Сбербанк, Газпромбанк, Бинбанк и другие менее известные.</p>
-          <p>Также поблизости находятся Центральный Универмаг, Гостинные ряды,  Центральный рынок, торговые центры: Galaxy, Eurozona, Forum, Сибирь, Таврический, Столичный, Большой; деловые центры Арун, Курбатовский, Садко; площадь Революции.</p>
+          <p>Поблизости находятся Центральный Универмаг, Гостинные ряды,  Центральный рынок, торговые центры: Galaxy, Eurozona, Forum, Сибирь, Таврический, Столичный, Большой; деловые центры Арун, Курбатовский, Садко; площадь Революции.</p>
         </div>
       </article>
       <aside class="sidebar">
