--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 </head>
 <body class="page frontpage">
 
+  <!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter39513195 = new Ya.Metrika({ id:39513195, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/39513195" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+
+  <!-- GA -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-83881764-1', 'auto');
+  ga('send', 'pageview');
+  </script>
+  <!-- / GA -->
+
   <section class="main">
     <div class="wrapper">
       <article class="content">
@@ -31,10 +44,10 @@
             <img src="images/street.jpg" alt="">
             <div class="label">Прогуляйтесь сами с помощью Google Street View</div>
           </a>
-          <p>Улица Ленина, в народе — <b>Арбат</b>, является первой и единственной  пешеходной зоной города Улан-Удэ, где проводятся почти все  <b>общегородские праздники и массовые народные гуляния</b>. Сюда же приходят <b>всевозможные туристы</b> и пеший городской маршрут.</p>
+          <p>Улица Ленина, в народе — <b>Арбат</b>, является первой и единственной  пешеходной зоной города Улан-Удэ, где проводятся почти все <b>общегородские праздники и массовые народные гуляния</b>. Сюда же приходят <b>всевозможные туристы</b> и пеший городской маршрут.</p>
           <p>Также это территория является <b>крупнейшим центром торговли </b> еще со времен Царской России. Здесь расположены множество магазинов и пунктов общественного питания.</p>
-          <p>Представлены такие бренды как Рив Гош, Adidas, Reebok, Cвязной,  Евросеть, Телефон.ру, МТС, Мегафон, Билайн, Tele2, Shene, Ostin,  Gloria Jeans, Westfalika, Rieker, DNS, Сбербанк, Газпромбанк, Бинбанк и другие менее известные.</p>
-          <p>Поблизости находятся Центральный Универмаг, Гостинные ряды,  Центральный рынок, торговые центры: Galaxy, Eurozona, Forum, Сибирь, Таврический, Столичный, Большой; деловые центры Арун, Курбатовский, Садко; площадь Революции.</p>
+          <p>Представлены такие бренды как Рив Гош, Adidas, Reebok, Cвязной, Евросеть, Телефон.ру, МТС, Мегафон, Билайн, Tele2, Shene, Ostin, Gloria Jeans, Westfalika, Rieker, DNS, Сбербанк, Газпромбанк, Бинбанк и другие менее известные.</p>
+          <p>Поблизости находятся Центральный Универмаг, Гостинные ряды, Центральный рынок, торговые центры: Galaxy, Eurozona, Forum, Сибирь, Таврический, Столичный, Большой; деловые центры Арун, Курбатовский, Садко; площадь Революции.</p>
         </div>
       </article>
       <aside class="sidebar">
