--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <link href="stylesheets/lightbox.css" rel="stylesheet">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link href="stylesheets/styles.css" rel="stylesheet">
   <script src="javascripts/jquery-2.2.4.min.js"></script>
   <script src="javascripts/app.js"></script>
