--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
   </section>
 
-  <section class="scheme">
+  <section class="scheme" id="ya-schema">
     <div class="wrapper">
       <h2 class="title">Cхема помещения<br>и фотографии</h2>
       <img class="pict" src="images/scheme.png" alt="">
