--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="copacity">211,4 м²</div>
           <div class="address">Ленина 27</div>
         </div>
-        <div class="text">
+        <div class="text" id="ya-information">
           <h3 class="title">Информация</h3>
           <p>Сдается в аренду 211 м² престижной торговой площади в первой линии центральной пешеходной улицы города.</p>
           <p>Два больших зала по 85 м² и подсобные помещения более 40 м². Электричество, водоснабжение, канализация, сигнализация, широкополосной интернет, обслуживающий персонал.</p>
@@ -97,7 +97,7 @@
           <div class="visitors">На выходных постоянно приезжают <br>шоппинг-туры из Монголии,<br> благодаря безвизовому режиму.</div>
         </section>
 
-        <section class="benefits">
+        <section class="benefits" id="ya-excellence">
           <h3 class="title">Преимущества:</h3>
           <ul>
             <li>2 подъездных пути;</li>
