--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <input type="text" id="contact" name="contact">
           </div>
           <div class="controls">
-            <div class="send"><input class="analytics-trigger trigger-general" type="submit" value="Отправить" onClick="ga('send', 'event', 'ga-button', 'ga-confirm')"></div>
+            <div class="send"><input class="ya-send analytics-trigger trigger-general" type="submit" value="Отправить" onClick="ga('send', 'event', 'ga-button', 'ga-confirm')"></div>
             <div class="reply">Мы вам ответим в ближайшее время.</div>
           </div>
           <div class="sent">
